es/nohup.out
  File "/home/robin/Evolutionary-strategies/es/main.py", line 60
    "nes_model_sigma01": load_model(path="../models/nes_model_sigma01.pt")
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
  File "/home/robin/Evolutionary-strategies/es/main.py", line 60
    "nes_model_sigma01": load_model(path="../models/nes_model_sigma01.pt")
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
  File "/home/robin/Evolutionary-strategies/es/main.py", line 64
    "es_model_sigma015_acc073_2": load_model(path"../models/es_model_sigma015_acc073_2.pt")
                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/robin/Evolutionary-strategies/es/main.py", line 1, in <module>
    from es import *
  File "/home/robin/Evolutionary-strategies/es/es.py", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
